# my-python-kata

./: .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  noxfile.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  index.rst  reference.md  reference.rst  requirements.txt  usage.md  usage.rst
docs/interviews/: FindPeak.md
src/interviews/: __init__.py  __main__.py
src/interviews/algorithms/: __init__.py  find_peak.py  graph_traversal.py  merge_arrays.py
src/interviews/datastructures/: __init__.py  binary_trees.py  graphs.py  heaps.py
src/my_python_kata/: __init__.py  __main__.py
src/my_python_kata/algorithms/: find_peak.py  graph_traversal.py  merge_arrays.py
src/my_python_kata/datastructures/: binary_trees.py  graphs.py  heaps.py
tests/: __init__.py  test_main.py
tests/algorithms/: __init__.py  graph_test_support.py  test_find_peak.py  test_graph_traversal_breadth_first.py  test_merge_arrays.py
tests/datastructures/: __init__.py  binary_trees_test_support.py  test_binary_trees.py  test_graphs.py  test_heaps.py
tests/shared/: __init__.py  binary_trees_test_support.py
