[tool.poetry]
name = "my-interviews-python"
version = "0.0.0"
description = "My Interviews Python"
authors = ["Mario Scalas <mario.scalas@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/scalasm/my-interviews-python"
repository = "https://github.com/scalasm/my-interviews-python"
documentation = "https://my-interviews-python.readthedocs.io"
packages = [
    { include = "interviews", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/scalasm/my-interviews-python/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.942"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.0.1"
pre-commit-hooks = "^4.0.1"
sphinx-click = "^4.0.3"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
furo = ">=2021.11.12"
Jinja2 = "^3.1.1"
# Pinning this because of https://github.com/PyCQA/bandit/issues/841
bandit = "1.7.2"
pytest-mock = "^3.7.0"

[tool.poetry.scripts]
my-interviews-python = "interviews.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["interviews"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
